# kri_local_RAG

./: .aiignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-reset.sh  docker-setup.sh  git_migr_tutorial.md  kri-local-rag.code-workspace  kri_local_RAG.code-workspace  pyproject.toml  pyproject.toml-notused  requirements.txt  run-docker.sh  run-rag-cli.sh  weaviate_docker_run.sh
.devcontainer/: devcontainer.json
.gemini/: config.yaml
.github/workflows/: python-lint-test.yml
Continue_AI_coder/: config.yaml
RAG_app/: config.py  ingest_pdf.py  windows_ip_in_wsl.py
RAG_app/RAG_app/: qa_loop.py
backend/: README.md  config.py  delete_collection.py  ingest_pdf.py  ollama_client.py  qa_loop.py  retriever.py
batch_and_shell/: automate_dev_start.md
dew-point-app/: dew-point-hrv-app.py
dewpointApp/: beach_weather.py  dewpoint_app.py  dewpoint_weather.py  requirements.txt
dewpointapp/: dew-point-hrv.py
docker/: Dockerfile.backend  README.md  backend.Dockerfile  docker-compose.yml  docker-compose_auth.yml-notused  frontend.Dockerfile  t2v-transformers.Dockerfile
docs/: DEVELOPMENT.md  GETTING_STARTED.md  README.md  docker-management.md  document-processing.md  embedding-model-selection.md
frontend/: rag_app.py  requirements.txt
python-scripts/: dew-point-vent-app.py
python_PoC_scripts/: config.yaml  ingest_pdf_old.py  rag_FAISS.py  rag_weaviate_pdf_PoC.py  rag_weaviate_string.py  rag_weaviate_v2_old.py
scripts/: try_geolocation.html  try_geolocation.py
tests/: config.py  test_imports.py
(+4 files in other folders)
