[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hands-on-llm"
authors = [{ name="Kristjan Sillmann"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch==2.5.1+cu121",
    "ipykernel",
    "numpy",
    "rich"
]

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ["py311"]
